# IceStaBS-Eval

./: .gitignore  LICENSE  README.md  example.py  example_output.txt  generate_corrections.py  generate_readme.py  pyproject.toml
M14-Eval/: M14-eval-config.yml  README.md  correcting-env.yml  generate_corrections.py  generate_readme.py
M14-Eval/data/: corrections.tsv  original_set_1.txt  original_set_2.txt
M14-Eval/data/output_manual/: ex_1_google.txt  ex_1_puki.txt  ex_2_google.txt  ex_2_word.txt
data/: IceStaBS-SP.json  corrections.tsv  original_set_3.txt
data/output_manual/: ex_1_word.txt  ex_2_puki.txt  ex_3_google.txt  ex_3_puki.txt  ex_3_word.txt
evaluation/: __init__.py  eval.yml  globals.py  statistics.py
src/icestabs_evaluation/: __init__.py  cli.py  statistics.py  token_level_eval.py
