[project]
name = "icestabs_evaluation"
version = "1.0.0"
authors = [{ name = "Hinrik Hafsteinsson", email = "hinhaf@hi.is" }]
description = "A package for evaluating Icelandic spelling checking software on the IceStaBS benchmark set."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pyyaml", "pandas", "tokenizer"]

[project.urls]
Homepage = "https://github.com/stofnun-arna-magnussonar/IceStaBS-SP"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
icestabs-eval = "icestabs_evaluation.cli:main"
